# UmaPyogin-Android

./: .gitmodules  License  Readme.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle  conanfile.txt
app/src/androidTest/java/moe/madoka/umapyogin_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: UmaPyogin.cpp
app/src/main/java/moe/madoka/umapyogin_android/: MainActivity.kt  UmaPyogin.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/moe/madoka/umapyogin_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
